Fixed some spacings for the images.

--- a/scss/_beauty_desktop.scss
+++ b/scss/_beauty_desktop.scss
@@ -31,11 +31,7 @@
   }
 
   .beauty__images_navigation_list-item:not(:nth-child(1)) {
-    margin-inline-start: 10px;
-  }
-
-  .beauty__image {
-    width: 100%;
+    margin-inline-start: 9px;
   }
 
   .beauty__navigation {
