--- a/scss/_beauty_section.scss
+++ b/scss/_beauty_section.scss
@@ -50,7 +50,7 @@
 }
 
 .beauty__image {
-  width: 170px;
+  width: 138px;
   border-radius: 5px;
 }
 
@@ -73,7 +73,7 @@
 }
 
 .beauty__images_navigation_list-item:not(:nth-child(1)) {
-  margin-inline-start: 16px;
+  margin-inline-start: 9px;
 }
 
 
